BC-5804: fixed recommendation service and tests