@@ -6,31 +6,25 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import school.faang.user_service.dto.recommendation.RecommendationDto;
-
 import school.faang.user_service.dto.recommendation.RecommendationEventDto;
 import school.faang.user_service.dto.skill.SkillOfferDto;
-import school.faang.user_service.dto.skill.UserSkillGuaranteeDto;
-import school.faang.user_service.dto.skill.SkillDto;
 import school.faang.user_service.entity.Skill;
+import school.faang.user_service.entity.User;
+import school.faang.user_service.entity.UserSkillGuarantee;
 import school.faang.user_service.entity.recommendation.Recommendation;
 import school.faang.user_service.entity.recommendation.SkillOffer;
 import school.faang.user_service.exception.EntityNotFoundException;
 import school.faang.user_service.mapper.recommendation.RecommendationMapper;
-import school.faang.user_service.mapper.skill.SkillMapper;
-import school.faang.user_service.mapper.skill.UserSkillGuaranteeMapper;
 import school.faang.user_service.publisher.recommendation.RecommendationEventPublisher;
-import school.faang.user_service.repository.SkillRepository;
 import school.faang.user_service.repository.UserSkillGuaranteeRepository;
 import school.faang.user_service.repository.recommendation.RecommendationRepository;
 import school.faang.user_service.repository.recommendation.SkillOfferRepository;
 import school.faang.user_service.validator.RecommendationValidator;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,48 +34,41 @@ public class RecommendationService {
     private final UserSkillGuaranteeRepository userSkillGuaranteeRepository;
     private final RecommendationRepository recommendationRepository;
     private final SkillOfferRepository skillOfferRepository;
-    private final SkillRepository skillRepository;
-    private final SkillMapper skillMapper;
     private final RecommendationMapper recommendationMapper;
-    private final UserSkillGuaranteeMapper userSkillGuaranteeMapper;
     private final RecommendationValidator recommendationValidator;
     private final RecommendationEventPublisher publisher;
 
-
     @Transactional
-    public RecommendationDto create(RecommendationDto recommendation) {
-        recommendationValidator.validateToCreate(recommendation);
+    public RecommendationDto create(RecommendationDto recommendationDto) {
+        recommendationValidator.validateToCreate(recommendationDto);
 
         long newRecommendationId = recommendationRepository.create(
-                recommendation.getAuthorId(),
-                recommendation.getReceiverId(),
-                recommendation.getContent()
-        );
+                recommendationDto.getAuthorId(),
+                recommendationDto.getReceiverId(),
+                recommendationDto.getContent());
+        Recommendation recommendation = getRecommendation(newRecommendationId);
 
-        Recommendation recommendationEntity = getRecommendation(newRecommendationId);
-
-        if (Objects.nonNull(recommendation.getSkillOffers())) {
-            saveSkillOffers(recommendationEntity, recommendation.getSkillOffers());
+        if (Objects.nonNull(recommendationDto.getSkillOffers())) {
+            saveSkillOffers(recommendation, recommendationDto.getSkillOffers());
         }
 
-        publishRecommendationEvent(recommendationEntity);
-
-        return recommendationMapper.toDto(recommendationEntity);
+        publishRecommendationEvent(recommendation);
+        return recommendationMapper.toDto(recommendation);
     }
 
     @Transactional
-    public RecommendationDto update(RecommendationDto recommendationUpdate) {
-        recommendationValidator.validateToUpdate(recommendationUpdate);
+    public RecommendationDto update(Long id, RecommendationDto recommendationDto) {
+        recommendationValidator.validateToUpdate(recommendationDto);
 
-        Recommendation recommendationEntity = recommendationRepository.update(
-                recommendationUpdate.getAuthorId(),
-                recommendationUpdate.getReceiverId(),
-                recommendationUpdate.getContent()
-        );
+        recommendationRepository.update(id, recommendationDto.getContent());
+        Recommendation recommendation = getRecommendation(id);
 
-        skillOfferRepository.deleteAllByRecommendationId(recommendationEntity.getId());
-        saveSkillOffers(recommendationEntity, recommendationUpdate.getSkillOffers());
-        return recommendationMapper.toDto(recommendationEntity);
+        if (Objects.nonNull(recommendationDto.getSkillOffers())) {
+            skillOfferRepository.deleteAllByRecommendationId(recommendation.getId());
+            saveSkillOffers(recommendation, recommendationDto.getSkillOffers());
+        }
+
+        return recommendationMapper.toDto(recommendation);
     }
 
     @Transactional
@@ -105,56 +92,53 @@ public class RecommendationService {
         return recommendationMapper.toRecommendationDtos(recommendations);
     }
 
-    private void saveSkillOffers(Recommendation recommendationEntity, List<SkillOfferDto> skillOffers) {
-        for (SkillOfferDto skillOfferDto : skillOffers) {
-            long newSkillOfferId = skillOfferRepository.create(
-                    skillOfferDto.getSkill(),
-                    recommendationEntity.getId()
-            );
-            recommendationEntity.addSkillOffer(skillOfferService.getSkillOffer(newSkillOfferId));
+    private void saveSkillOffers(Recommendation recommendation, List<SkillOfferDto> skillOfferDtos) {
+        List<SkillOffer> skillOffers = skillOfferDtos.stream()
+                .map(skillOfferDto -> skillOfferRepository.create(skillOfferDto.getSkill(), recommendation.getId()))
+                .map(skillOfferService::getSkillOffer)
+                .toList();
 
-            List<SkillDto> skillsInUserDtos = getUserSkillsAndConvertToDtos(recommendationEntity.getAuthor().getId());
+        User receiver = recommendation.getReceiver();
+        User guarantor = recommendation.getAuthor();
 
-            UserSkillGuaranteeDto userSkillGuaranteeDto = createUserSkillGuaranteeDto(recommendationEntity);
+        List<Skill> newSkills = getNewSkillsFromSkillOffers(skillOffers, receiver);
+        newSkills.forEach(skill -> addNewSkillToReceiver(recommendation, skill));
 
-            for (SkillOffer skillOffer : recommendationEntity.getSkillOffers()) {
-                skillsInUserDtos.stream()
-                        .filter(userSkill -> userSkill.getId().equals(skillOffer.getSkill().getId()))
-                        .forEach(skill -> provideGuarantee(
-                                skill,
-                                recommendationEntity.getAuthor().getId(),
-                                userSkillGuaranteeDto));
-            }
-        }
+        List<Skill> notGuaranteedSkills = getNotGuaranteedSkillsFromSkillOffers(skillOffers, receiver, guarantor);
+        notGuaranteedSkills.forEach(skill -> addGuarantorToSkill(recommendation, skill));
     }
 
-    private List<SkillDto> getUserSkillsAndConvertToDtos(long userId) {
-        List<Skill> skills = skillRepository.findAllByUserId(userId);
-        List<SkillDto> skillDtos = new ArrayList<>();
-
-        if (!skills.isEmpty()) {
-            skillDtos = skills.stream()
-                    .map(skillMapper::toDto)
-                    .collect(Collectors.toList());
-        }
-        return skillDtos;
+    private List<Skill> getNewSkillsFromSkillOffers(List<SkillOffer> skillOffers, User receiver) {
+        return skillOffers.stream()
+                .map(SkillOffer::getSkill)
+                .filter(skill -> !receiver.getSkills().contains(skill))
+                .toList();
     }
 
-    private UserSkillGuaranteeDto createUserSkillGuaranteeDto(Recommendation recommendationEntity) {
-        return UserSkillGuaranteeDto.builder()
-                .userId(recommendationEntity.getReceiver().getId())
-                .guarantorId(recommendationEntity.getAuthor().getId())
+    private List<Skill> getNotGuaranteedSkillsFromSkillOffers(List<SkillOffer> skillOffers, User receiver, User guarantor) {
+        return skillOffers.stream()
+                .map(SkillOffer::getSkill)
+                .filter(skill -> receiver.getSkills().contains(skill))
+                .filter(skill -> !skill.getGuarantees().stream()
+                        .map(UserSkillGuarantee::getGuarantor)
+                        .toList().contains(guarantor))
+                .toList();
+    }
+
+    private void addNewSkillToReceiver(Recommendation recommendation, Skill skill) {
+        addGuarantorToSkill(recommendation, skill);
+        recommendation.getReceiver().getSkills().add(skill);
+        skill.getUsers().add(recommendation.getReceiver());
+    }
+
+    private void addGuarantorToSkill(Recommendation recommendationEntity, Skill skill) {
+        UserSkillGuarantee userSkillGuarantee = UserSkillGuarantee.builder()
+                .user(recommendationEntity.getReceiver())
+                .guarantor(recommendationEntity.getAuthor())
+                .skill(skill)
                 .build();
-    }
-
-    private void provideGuarantee(SkillDto skill, long authorId, UserSkillGuaranteeDto userSkillGuaranteeDto) {
-        if (skill.getGuarantees()
-                .stream()
-                .noneMatch(guarantee -> guarantee.getGuarantorId() == authorId)) {
-            userSkillGuaranteeDto.setSkillId(skill.getId());
-            skill.getGuarantees().add(userSkillGuaranteeDto);
-            userSkillGuaranteeRepository.save(userSkillGuaranteeMapper.toEntity(userSkillGuaranteeDto));
-        }
+        userSkillGuarantee = userSkillGuaranteeRepository.save(userSkillGuarantee);
+        skill.getGuarantees().add(userSkillGuarantee);
     }
 
     private void publishRecommendationEvent(Recommendation recommendation) {
